<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/fat"
        android:layout_width="86dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center|center_vertical"
        android:text="0"
        android:textColor="?android:attr/colorForegroundInverse"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/calories" />

    <TextView
        android:id="@+id/calories"
        android:layout_width="86dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center|center_vertical"
        android:text="0"
        android:textColor="?android:attr/colorForegroundInverse"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/cholesterol" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@color/design_default_color_error"
        android:gravity="center|center_vertical"
        android:text="Awarnress"
        android:textColor="?android:attr/colorForegroundInverse"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/awarnress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:background="@color/design_default_color_error"
        android:gravity="center|center_vertical"
        android:text="Calories"
        android:textColor="?android:attr/colorForegroundInverse"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/awarnress"
        android:layout_width="86dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center|center_vertical"
        android:text="0"
        android:textColor="?android:attr/colorForegroundInverse"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fat" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="86dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center|center_vertical"
        android:text="0"
        android:textColor="?android:attr/colorForegroundInverse"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <TextView
        android:id="@+id/cholesterol"
        android:layout_width="86dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center|center_vertical"
        android:text="0"
        android:textColor="?android:attr/colorForegroundInverse"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/cost" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="162dp"
        android:layout_height="146dp"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:background="@color/design_default_color_error"
        android:gravity="center|center_vertical"
        android:text="@string/cost"
        android:textColor="?android:attr/colorForegroundInverse"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:background="@color/design_default_color_error"
        android:gravity="center|center_vertical"
        android:text="Fat"
        android:textColor="?android:attr/colorForegroundInverse"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="210dp"
        android:layout_height="53dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:background="@color/design_default_color_error"
        android:gravity="center|center_vertical"
        android:text="@string/cholesterol"
        android:textColor="?android:attr/colorForegroundInverse"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/slectReceipe"
        android:layout_width="218dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/select_receipe"
        android:textColor="@color/design_default_color_background"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.193" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>